--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -130,6 +130,12 @@
 			<artifactId>mockito-all</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+            <scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
