--- a/spring-batch-samples/src/main/sql/mysql.properties
+++ b/spring-batch-samples/src/main/sql/mysql.properties
@@ -1,9 +1,9 @@
-platform=oracle10g
+platform=mysql
 # SQL language oddities
 BIGINT = BIGINT
 IDENTITY = 
 GENERATED = 
-VOODOO = type=InnoDB
+VOODOO = engine=InnoDB
 IFEXISTSBEFORE = IF EXISTS
 DOUBLE = DOUBLE PRECISION
 DECIMAL = DECIMAL
