--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<name>Spring Batch</name>
 	<description>Spring Batch provides tools for enterprise batch or bulk processing. It can be used to wire up jobs, and track
 	their execution, or simply as an optimization for repetitive processing in a transactional environment. Spring Batch is part of the Spring Portfolio.</description>
-	<version>3.0.0.BUILD-SNAPSHOT</version>
+	<version>3.0.0.M1</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>spring-batch-parent</module>
@@ -23,7 +23,7 @@
 		<url>http://github.com/SpringSource/spring-batch</url>
 		<connection>scm:git:git://github.com/SpringSource/spring-batch.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/SpringSource/spring-batch.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>3.0.0.M1</tag>
   </scm>
 	<issueManagement>
 		<system>JIRA</system>
