--- a/_config.yml
+++ b/_config.yml
@@ -10,20 +10,20 @@ redcarpet:
 ### The following properties will change on a project-by-project basis
 
 # Context path in the remote website (usually /<project>), will be prepended to absolute URLs for static resources
-baseurl: /gh-pages
+baseurl: /spring-batch
 
 # Name of the project for display in places like page titles
-name: Spring Framework
+name: Spring Batch
 
 # ID of the project in the metadata API at spring.io (if this is not a
 # valid project ID the javascript widgets in the home page will not work)
-project: spring-framework
+project: spring-batch
 
 # Project github URL
-github_repo_url: http://github.com/spring-projects/spring-framework
+github_repo_url: https://github.com/spring-projects/spring-batch.git
 
 # Project forum URL
-forum: http://forum.spring.io/forum/spring-projects/container
+forum: http://forum.spring.io/forum/spring-projects/batch
 
 
 ### The following properties are constant for most projects
