--- a/archetypes/pom.xml
+++ b/archetypes/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.springframework.batch</groupId>
     <artifactId>spring-batch-parent</artifactId>
-    <version>2.2.2.BUILD-SNAPSHOT</version>
+    <version>2.2.2.RELEASE</version>
     <relativePath>../spring-batch-parent</relativePath>
   </parent>
   <modules>
