--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
+		<version>2.2.3.BUILD-SNAPSHOT</version>
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
 	<build>
