--- a/spring-batch-admin-parent/pom.xml
+++ b/spring-batch-admin-parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.batch</groupId>
 	<artifactId>spring-batch-admin-parent</artifactId>
-	<version>1.3.0.BUILD-SNAPSHOT</version>
+	<version>2.0.0.BUILD-SNAPSHOT</version>
 	<name>Spring Batch Admin Parent</name>
 	<description>A set of services (Java, JSON) and a UI (webapp) for managing and launching Spring Batch jobs.</description>
 	<url>http://www.springsource.org/spring-batch-admin</url>
@@ -34,10 +34,10 @@
 	</developers>
 	<properties>
 		<maven.test.failure.ignore>false</maven.test.failure.ignore>
-		<spring.batch.version>2.2.3.BUILD-SNAPSHOT</spring.batch.version>
-		<spring.framework.version>3.2.1.RELEASE</spring.framework.version>
-		<spring.integration.version>2.2.5.RELEASE</spring.integration.version>
-		<spring.retry.version>1.0.2.RELEASE</spring.retry.version>
+		<spring.batch.version>2.2.4.BUILD-SNAPSHOT</spring.batch.version>
+		<spring.framework.version>4.0.0.BUILD-SNAPSHOT</spring.framework.version>
+		<spring.integration.version>4.0.0.BUILD-SNAPSHOT</spring.integration.version>
+		<spring.retry.version>1.0.3.RELEASE</spring.retry.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -346,7 +346,7 @@
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-mapper-asl</artifactId>
-				<version>1.6.3</version>
+				<version>1.9.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
