--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
-		<version>2.2.4.BUILD-SNAPSHOT</version>
+		<version>2.2.4.RELEASE</version>
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
 	<properties>
