--- a/build.gradle
+++ b/build.gradle
@@ -46,15 +46,15 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.0.BUILD-SNAPSHOT'
+		springVersionDefault = '5.0.0.RC3'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.0.RELEASE'
-		springAmqpVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.0.0.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.0.0.M5'
+		springDataCommonsVersion = '2.0.0.RC2'
+		springDataGemfireVersion = '2.0.0.RC2'
+		springDataJpaVersion = '2.0.0.RC2'
+		springDataMongodbVersion = '2.0.0.RC2'
+		springDataNeo4jVersion = '5.0.0.RC2'
 		springIntegrationVersion = '5.0.0.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.1.RELEASE'
 
