--- a/build.gradle
+++ b/build.gradle
@@ -55,10 +55,10 @@ allprojects {
 		springDataJpaVersion = '2.0.0.RELEASE'
 		springDataMongodbVersion = '2.0.0.RELEASE'
 		springDataNeo4jVersion = '5.0.0.RELEASE'
-		springIntegrationVersion = '5.0.0.M7'
+		springIntegrationVersion = '5.0.0.RC1'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.1'
+		activemqVersion = '5.15.2'
 		aspectjVersion = '1.8.12'
 		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
@@ -71,9 +71,9 @@ allprojects {
 		hamcrestVersion = '1.3'
 		h2databaseVersion = '1.4.196'
 		hibernateVersion = '5.2.12.Final'
-		hibernateValidatorVersion = '6.0.3.Final'
+		hibernateValidatorVersion = '6.0.4.Final'
 		hsqldbVersion = '2.4.0'
-		jackson2Version = "2.9.2"
+		jackson2Version = '2.9.2'
 		javaMailVersion = '1.6.0'
 		javaxBatchApiVersion = '1.0'
 		javaxInjectVersion = '1'
@@ -82,7 +82,7 @@ allprojects {
 		jettisonVersion = '1.2' //?
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
-		log4jVersion = '2.8.2'
+		log4jVersion = '2.9.1'
 		mysqlVersion = '5.1.44'
 		mockitoVersion = '2.11.0'
 		postgresqlVersion = '42.1.4'
