--- a/spring-batch-infrastructure-tests/src/test/resources/log4j.properties
+++ b/spring-batch-infrastructure-tests/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootCategory=INFO, stdout
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout=org.apache.logging.log4j.core.appender.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.logging.log4j.core.layout.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%L - %m%n
 
 log4j.category.org.apache.activemq=ERROR
