--- a/spring-batch-infrastructure/src/test/resources/log4j.properties
+++ b/spring-batch-infrastructure/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootCategory=INFO, stdout
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout=org.apache.logging.log4j.core.appender.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.logging.log4j.core.layout.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p %t [%c] - <%m>%n
 
 #log4j.category.org.springframework.batch=DEBUG
