--- a/spring-batch-samples/src/main/resources/log4j.properties
+++ b/spring-batch-samples/src/main/resources/log4j.properties
@@ -2,9 +2,9 @@ log4j.rootLogger=info, stdout
 # log4j.rootLogger=info, stdout, chainsaw
 
 ### direct log messages to stdout ###
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout=org.apache.logging.log4j.core.appender.ConsoleAppender
 log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout=org.apache.logging.log4j.core.layout.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%L - %m%n
 
 log4j.appender.chainsaw=org.apache.log4j.RollingFileAppender
