--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ allprojects {
 		springDataJpaVersion = '2.0.0.RELEASE'
 		springDataMongodbVersion = '2.0.0.RELEASE'
 		springDataNeo4jVersion = '5.0.0.RELEASE'
-		springIntegrationVersion = '5.0.0.RC1'
+		springIntegrationVersion = '5.0.0.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.2'
