--- a/build.gradle
+++ b/build.gradle
@@ -48,16 +48,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.2'
+		springVersionDefault = '5.3.4-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.0'
-		springAmqpVersion = '2.3.2'
-		springDataCommonsVersion = '2.4.2'
-		springDataGeodeVersion = '2.4.2'
-		springDataJpaVersion = '2.4.2'
-		springDataMongodbVersion = '3.1.2'
-		springIntegrationVersion = '5.4.2'
-		springKafkaVersion = '2.6.4'
+		springRetryVersion = '1.3.1'
+		springAmqpVersion = '2.3.5-SNAPSHOT'
+		springDataCommonsVersion = '2.4.4-SNAPSHOT'
+		springDataGeodeVersion = '2.4.4-SNAPSHOT'
+		springDataJpaVersion = '2.4.4-SNAPSHOT'
+		springDataMongodbVersion = '3.1.4-SNAPSHOT'
+		springIntegrationVersion = '5.4.4-SNAPSHOT'
+		springKafkaVersion = '2.6.6-SNAPSHOT'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.13'
@@ -102,7 +102,7 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.8'
+		micrometerVersion = '1.5.11-SNAPSHOT'
 		prometheusPushgatewayVersion = '0.9.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
