--- a/build.gradle
+++ b/build.gradle
@@ -47,20 +47,20 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.14.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.13.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.16.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.14.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.12.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.14.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.2.16.RELEASE'
+		springDataCommonsVersion = '2.2.13.RELEASE'
+		springDataGemfireVersion = '2.2.13.RELEASE'
+		springDataJpaVersion = '2.2.13.RELEASE'
+		springDataMongodbVersion = '2.2.13.RELEASE'
+		springDataNeo4jVersion = '5.2.13.RELEASE'
+		springIntegrationVersion = '5.2.11.RELEASE'
+		springKafkaVersion = '2.3.13.RELEASE'
 		springLdapVersion = '2.3.3.RELEASE'
 
-		activemqVersion = '5.15.13'
+		activemqVersion = '5.15.14'
 		apacheAvroVersion ='1.9.2'
 		aspectjVersion = '1.9.6'
 		commonsDdbcpVersion = '2.7.0'
@@ -71,8 +71,8 @@ allprojects {
 		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.25.Final'
-		hibernateValidatorVersion = '6.0.21.Final'
+		hibernateVersion = '5.4.29.Final'
+		hibernateValidatorVersion = '6.0.22.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.1'
 		jackson2Version = '2.10.5.1'
@@ -85,11 +85,11 @@ allprojects {
 		jbatchTckSpi = '1.0'
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
-		junitVersion = '4.13.1'
+		junitVersion = '4.13.2'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.22'
+		mysqlVersion = '8.0.23'
 		mockitoVersion = '3.3.3'
-		postgresqlVersion = '42.2.18'
+		postgresqlVersion = '42.2.19'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
@@ -101,8 +101,8 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.17-SNAPSHOT'
-		prometheusPushgatewayVersion = '0.9.0'
+		micrometerVersion = '1.3.18'
+		prometheusPushgatewayVersion = '0.10.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
 	}
@@ -120,7 +120,7 @@ configure(subprojects - project(":spring-build-src")) { subproject ->
 	apply plugin: 'merge'
 
 	jacoco {
-		toolVersion = "0.8.2"
+		toolVersion = "0.8.5"
 	}
 
     compileJava {
