--- a/build.gradle
+++ b/build.gradle
@@ -48,16 +48,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.5-SNAPSHOT'
+		springVersionDefault = '5.3.5'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.6-SNAPSHOT'
-		springDataCommonsVersion = '2.4.6-SNAPSHOT'
-		springDataGeodeVersion = '2.4.6-SNAPSHOT'
-		springDataJpaVersion = '2.4.6-SNAPSHOT'
-		springDataMongodbVersion = '3.1.6-SNAPSHOT'
-		springIntegrationVersion = '5.4.5-SNAPSHOT'
-		springKafkaVersion = '2.6.7-SNAPSHOT'
+		springAmqpVersion = '2.3.6'
+		springDataCommonsVersion = '2.4.6'
+		springDataGeodeVersion = '2.4.6'
+		springDataJpaVersion = '2.4.6'
+		springDataMongodbVersion = '3.1.6'
+		springIntegrationVersion = '5.4.5'
+		springKafkaVersion = '2.6.7'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.14'
@@ -102,7 +102,7 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.12-SNAPSHOT'
+		micrometerVersion = '1.5.12'
 		prometheusPushgatewayVersion = '0.10.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
