--- a/build.gradle
+++ b/build.gradle
@@ -47,17 +47,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.13.RELEASE'
+		springVersionDefault = '5.2.14.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.16.RELEASE'
-		springDataCommonsVersion = '2.2.13.RELEASE'
-		springDataGemfireVersion = '2.2.13.RELEASE'
-		springDataJpaVersion = '2.2.13.RELEASE'
-		springDataMongodbVersion = '2.2.13.RELEASE'
-		springDataNeo4jVersion = '5.2.13.RELEASE'
-		springIntegrationVersion = '5.2.11.RELEASE'
-		springKafkaVersion = '2.3.13.RELEASE'
+		springAmqpVersion = '2.2.17.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.2.14.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.2.12.BUILD-SNAPSHOT'
+		springKafkaVersion = '2.3.14.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.14'
@@ -101,7 +101,7 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.18'
+		micrometerVersion = '1.3.19-SNAPSHOT'
 		prometheusPushgatewayVersion = '0.10.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
