--- a/pom.xml
+++ b/pom.xml
@@ -52,71 +52,71 @@
 		<java.version>1.8</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>5.3.1</spring-framework.version>
+		<spring-framework.version>5.3.7-SNAPSHOT</spring-framework.version>
 		<spring-retry.version>1.3.0</spring-retry.version>
-		<spring-integration.version>5.4.1</spring-integration.version>
-		<micrometer.version>1.6.1</micrometer.version>
-		<jackson.version>2.11.3</jackson.version>
+		<spring-integration.version>5.5.0-SNAPSHOT</spring-integration.version>
+		<micrometer.version>1.7.0-SNAPSHOT</micrometer.version>
+		<jackson.version>2.12.3</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>2.4.1</spring-data-geode.version>
-		<spring-data-commons.version>2.4.1</spring-data-commons.version>
-		<spring-data-jpa.version>2.4.1</spring-data-jpa.version>
-		<spring-data-mongodb.version>3.1.1</spring-data-mongodb.version>
-		<spring-kafka.version>2.6.3</spring-kafka.version>
-		<spring-amqp.version>2.3.1</spring-amqp.version>
-		<spring-ldap.version>2.3.3.RELEASE</spring-ldap.version>
+		<spring-data-geode.version>2.5.1-SNAPSHOT</spring-data-geode.version>
+		<spring-data-commons.version>2.5.1-SNAPSHOT</spring-data-commons.version>
+		<spring-data-jpa.version>2.5.1-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-mongodb.version>3.2.1-SNAPSHOT</spring-data-mongodb.version>
+		<spring-kafka.version>2.7.1-SNAPSHOT</spring-kafka.version>
+		<spring-amqp.version>2.3.7-SNAPSHOT</spring-amqp.version>
+		<spring-ldap.version>2.3.4.BUILD-SNAPSHOT</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.8.6</gson.version>
-		<hibernate-core.version>5.4.23.Final</hibernate-core.version>
+		<hibernate-core.version>5.4.30.Final</hibernate-core.version>
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 		<javax.mail-api.version>1.6.2</javax.mail-api.version>
 		<javax.jms-api.version>2.0.1</javax.jms-api.version>
 		<javax.batch-api.version>1.0</javax.batch-api.version>
 		<validation-api.version>2.0.1.Final</validation-api.version>
-		<neo4j-ogm-core.version>3.2.17</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.1.1</mongodb-driver-sync.version>
+		<neo4j-ogm-core.version>3.2.21</neo4j-ogm-core.version>
+		<mongodb-driver-sync.version>4.2.3</mongodb-driver-sync.version>
 		<xstream.version>1.4.16</xstream.version>
-		<junit-jupiter.version>5.7.0</junit-jupiter.version>
+		<junit-jupiter.version>5.7.1</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<junit.version>4.13.1</junit.version>
+		<junit.version>4.13.2</junit.version>
 		<hamcrest.version>2.2</hamcrest.version>
-		<assertj.version>3.18.1</assertj.version>
-		<mockito.version>3.6.0</mockito.version>
-		<xmlunit.version>2.8.1</xmlunit.version>
+		<assertj.version>3.19.0</assertj.version>
+		<mockito.version>3.9.0</mockito.version>
+		<xmlunit.version>2.8.2</xmlunit.version>
 		<commons-io.version>2.8.0</commons-io.version>
 		<commons-dbcp2.version>2.8.0</commons-dbcp2.version>
 		<slf4j.version>1.7.30</slf4j.version>
-		<hsqldb.version>2.5.1</hsqldb.version>
+		<hsqldb.version>2.5.2</hsqldb.version>
 		<h2.version>1.4.200</h2.version>
-		<sqlite.version>3.32.3.2</sqlite.version>
+		<sqlite.version>3.34.0</sqlite.version>
 		<derby.version>10.14.2.0</derby.version>
-		<activemq.version>5.15.13</activemq.version>
+		<activemq.version>5.15.14</activemq.version>
 		<jaxb-api.version>2.3.1</jaxb-api.version>
 		<jaxb-core.version>2.3.0.1</jaxb-core.version>
-		<log4j.version>2.13.3</log4j.version>
-		<hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
+		<log4j.version>2.14.1</log4j.version>
+		<hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
 		<javax.el.version>3.0.0</javax.el.version>
-		<woodstox-core.version>6.2.3</woodstox-core.version>
+		<woodstox-core.version>6.2.5</woodstox-core.version>
 		<aspectj.version>1.9.6</aspectj.version>
-		<mysql-connector-java.version>8.0.22</mysql-connector-java.version>
-		<testcontainers.version>1.14.3</testcontainers.version>
+		<mysql-connector-java.version>8.0.23</mysql-connector-java.version>
+		<testcontainers.version>1.15.3</testcontainers.version>
 		<com.ibm.jbatch-tck-spi.version>1.0</com.ibm.jbatch-tck-spi.version>
 		<javax.inject.version>1</javax.inject.version>
 		<jettison.version>1.2</jettison.version>
 		<jsonassert.version>1.5.0</jsonassert.version>
 
 		<!-- samples dependencies -->
-		<hibernate-entitymanager.version>5.4.24.Final</hibernate-entitymanager.version>
-		<spring-rabbit.version>2.3.1</spring-rabbit.version>
+		<hibernate-entitymanager.version>5.4.30.Final</hibernate-entitymanager.version>
+		<spring-rabbit.version>2.3.6</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
-		<prometheus_pushgateway.version>0.9.0</prometheus_pushgateway.version>
-		<groovy.version>2.5.13</groovy.version>
+		<prometheus_pushgateway.version>0.10.0</prometheus_pushgateway.version>
+		<groovy.version>2.5.14</groovy.version>
 		
 		<!-- documentation dependencies -->
 		<spring-doc-resources.version>0.2.5</spring-doc-resources.version>
-		<asciidoctorj-pdf.version>1.5.3</asciidoctorj-pdf.version>
+		<asciidoctorj-pdf.version>1.5.4</asciidoctorj-pdf.version>
 
 		<!-- plugin versions -->
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -125,7 +125,7 @@
 		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
 		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
-		<flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
+		<flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 		<asciidoctor-maven-plugin.version>2.1.0</asciidoctor-maven-plugin.version>
