--- a/build.gradle
+++ b/build.gradle
@@ -48,17 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.6-SNAPSHOT'
+		springVersionDefault = '5.3.7-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
 		springAmqpVersion = '2.3.7-SNAPSHOT'
-		springDataCommonsVersion = '2.4.7-SNAPSHOT'
-		springDataGeodeVersion = '2.4.7-SNAPSHOT'
-		springDataJpaVersion = '2.4.7-SNAPSHOT'
-		springDataMongodbVersion = '3.1.7-SNAPSHOT'
-		springIntegrationVersion = '5.4.6-SNAPSHOT'
+		springDataCommonsVersion = '2.4.9-SNAPSHOT'
+		springDataGeodeVersion = '2.4.9-SNAPSHOT'
+		springDataJpaVersion = '2.4.9-SNAPSHOT'
+		springDataMongodbVersion = '3.1.9-SNAPSHOT'
+		springIntegrationVersion = '5.4.7-SNAPSHOT'
 		springKafkaVersion = '2.6.8-SNAPSHOT'
-		springLdapVersion = '2.3.3.RELEASE'
+		springLdapVersion = '2.3.4.BUILD-SNAPSHOT'
+		micrometerVersion = '1.5.14-SNAPSHOT'
 
 		activemqVersion = '5.15.14'
 		apacheAvroVersion ='1.9.2'
@@ -102,7 +103,6 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.13-SNAPSHOT'
 		prometheusPushgatewayVersion = '0.10.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
